--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@tinymce/tinymce-react": "^4.3.2",
     "autosize": "^6.0.1",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
